--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "pdfjs-dist": "^3.4.120",
     "react": "^18.2.0",
     "react-bootstrap": "^2.7.2",
+    "react-doc-viewer": "^0.1.5",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.10.0",
     "react-scripts": "5.0.1",
@@ -42,5 +43,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "copy-webpack-plugin": "^11.0.0"
   }
 }
