--- a/package.json
+++ b/package.json
@@ -8,9 +8,13 @@
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "@truffle/hdwallet-provider": "^2.1.9",
     "ag-grid-community": "^29.2.0",
     "ag-grid-react": "^29.2.0",
     "bootstrap": "^5.2.3",
+    "ethers": "^6.3.0",
+    "ipfs-http-client": "^60.0.0",
+    "next": "^12.3.4",
     "pdfjs-dist": "^3.4.120",
     "react": "^18.2.0",
     "react-axios": "^2.0.6",
@@ -19,6 +23,9 @@
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.10.0",
     "react-scripts": "5.0.1",
+    "semantic-ui-css": "^2.5.0",
+    "semantic-ui-react": "^2.1.4",
+    "solc": "^0.8.19",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
