updated forn ui

--- a/package.json
+++ b/package.json
@@ -11,9 +11,11 @@
     "@truffle/hdwallet-provider": "^2.1.9",
     "ag-grid-community": "^29.2.0",
     "ag-grid-react": "^29.2.0",
+    "axios": "^1.3.6",
     "bootstrap": "^5.2.3",
     "ethers": "^6.3.0",
     "ipfs-http-client": "^60.0.0",
+    "js-file-download": "^0.4.12",
     "next": "^12.3.4",
     "pdfjs-dist": "^3.4.120",
     "react": "^18.2.0",
